# smart-pred

./: .gitignore  install_paddlets.sh  requirements.txt  setup.cfg  setup.py
analysis/: azure_trace_2021.ipynb  azure_trace_2021.py
analysis/motivation/: draw_trace.py
analysis/plot_azure_trace/: plot_trace.py
analysis/plot_crane_trace/: plot_crane.py
analysis/test_trace_classification/: demo.py
analysis/workload_changes/: export_trace.py
evaluation/accuracy/: avg_result.py  evaluate_accuracy.py  exp.py  exp_azure_1ad3a.py  exp_azure_24b66.py  exp_azure_4be8e.py  exp_azure_6ae34.py  exp_azure_94a32.py  exp_azure_9c9e6.py  exp_crane_11.py  exp_crane_14.py  exp_crane_8.py  exp_crane_9.py  exp_huawei_private_28.py  exp_huawei_private_4.py  exp_huawei_public_4.py  exp_with_one_trace.py  explore_trace.py  results.csv
evaluation/cold_start_ratio/: plot_from_csv_CH.py  result.csv
evaluation/cold_start_resource_utilization_ratio/: avg_result.py  cold_start_result.csv  evaluate_accuracy.py  exp_azure_1ad3a.py  exp_azure_24b66.py  exp_azure_4be8e.py  exp_azure_94a32.py  exp_azure_9c9e6.py  exp_crane_11.py  exp_crane_14.py  exp_crane_8.py  exp_crane_9.py  exp_huawei_private_28.py  exp_huawei_private_4.py  exp_huawei_public_4.py  exp_with_one_trace.py  plot_from_csv_CH.py
evaluation/overhead/: avg_result.py  exp_azure_1ad3a.py  (+13 more)
smart_pred/: dataset.py  hello.py  predictor.py  test_gpu_available.py
test/: test_arima.py  test_complex.py  test_fourier.py  test_fusion.py  test_fusion_segment.py  test_fusion_segment_bursty.py  test_histogram.py  test_quantile.py
(+393 files in other folders)
