[metadata]
name = smart-pred
version = 1.0
author = Zhaojie
long_description = file: README.md
license = MIT
url = https://github.com/wenzhaojie/smart-pred
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    matplotlib
    boto3
    redis
    psutil

[options.entry_points]
console_scripts =
    smart_pred = smart_pred.hello.hello:main
